--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome Books</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <form action="" id="form">
+    <h2>Add a New Book</h2>
+    <div class="inputContainer">
+      <input type="text" class="title_input" placeholder="Title">
+      <input type="text" class="author_input" placeholder="Author">
+    </div>
+    <button id="submit_btn" type="submit">Add Book</button>
+  </form>
+  <script src="main.js"></script>
   
 </body>
 </html>
