--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <ul id="book_list"></ul>
   <form action="" id="form">
     <h2>Add a New Book</h2>
     <div class="inputContainer">
-      <input type="text" class="title_input" placeholder="Title">
-      <input type="text" class="author_input" placeholder="Author">
+      <input type="text" id="title_input" placeholder="Title">
+      <input type="text" id="author_input" placeholder="Author">
     </div>
     <button id="submit_btn" type="submit">Add Book</button>
   </form>
