Add id for each book item. Add error messages for existing books and empty input fields. Add basic styles.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Awesome Books</title>
+  <title>All Awesome Books</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <div class="container">
+    <h1>All Awesome Books</h1>
   <ul id="book_list"></ul>
   <form action="" id="form">
     <h2>Add a New Book</h2>
     <div class="inputContainer">
-      <input type="text" id="title_input" placeholder="Title">
-      <input type="text" id="author_input" placeholder="Author">
+      <input type="text" id="title" placeholder="Title">
+      <input type="text" id="author" placeholder="Author">
     </div>
-    <button id="submit_btn" type="submit">Add Book</button>
+    <button id="submit_btn" class="btn-add" type="submit">Add Book</button>
   </form>
+</div>
   <script src="main.js"></script>
-  
+
 </body>
 </html>
