Modify main.js and style changes

--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All Awesome Books</title>
   <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h1>All Awesome Books</h1>
+    <h1>All awesome books</h1>
   <ul id="book_list"></ul>
+  <hr>
   <form action="" id="form">
-    <h2>Add a New Book</h2>
+    <h1>Add a new book</h1>
     <div class="inputContainer">
       <input type="text" id="title" placeholder="Title">
       <input type="text" id="author" placeholder="Author">
-    </div>
-    <button id="submit_btn" class="btn-add" type="submit">Add Book</button>
+      <button id="submit_btn" class="btn-add" type="submit">Add Book</button>
+    </div>    
+    <span id="messageField"></span>
   </form>
 </div>
   <script src="main.js"></script>
