Modify dateTime function, style changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li class="nav-item" id="nav-contact">Contact</li>
     </ul>
   </nav>
-  <span class="date" id="dateContainer"></span>
+  <span id="current-date-time"></span>
 </header>
   <main class="container">
   <ul id="book_list" class=""></ul>
